--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 ---
-layout: default
+layout: home
+gallery:
+ - image: /images/le_bg_01.jpg
+ - image: /images/le_bg_02.jpg
+ - image: /images/le_bg_03.jpg
+ - image: /images/le_bg_04.jpg
+ - image: /images/le_bg_05.jpg
+ - image: /images/le_bg_06.jpg
+ - image: /images/le_bg_07.jpg
+ - image: /images/le_bg_08.jpg
+ - image: /images/le_bg_09.jpg
+ - image: /images/le_bg_10.jpg
+ - image: /images/le_bg_11.jpg
+ - image: /images/le_bg_12.jpg
+slideshow: false
 ---
-Hello world!
-Hello again!
-And one more time.
-
-Here's more text.
